# WormVerify

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.anchor  EVALUATION.md  README.md  docker-compose.yml
.cargo/: audit.toml
.github/workflows/: ci.yml
anchor/: Anchor.toml
anchor/.cargo/: audit.toml
anchor/programs/wormverify-core/: Cargo.toml
anchor/programs/wormverify-core/src/: error.rs  lib.rs  state.rs  vaa.rs  verify.rs
anchor/programs/wormverify-core/tests/: verify_integration.rs
crates/wormverify-api/: Cargo.toml
crates/wormverify-api/src/: lib.rs  schema.rs  state.rs
crates/wormverify-core/: Cargo.toml
crates/wormverify-core/src/: domain.rs  engine.rs  error.rs  lib.rs  ports.rs
crates/wormverify-core/tests/: engine_flow.rs
crates/wormverify-infra/: Cargo.toml
crates/wormverify-infra/src/: events.rs  lib.rs  memory.rs  postgres.rs  signer.rs
crates/wormverify-node/: Cargo.toml
crates/wormverify-node/src/: config.rs  demo.rs  lib.rs  main.rs  startup.rs  telemetry.rs
crates/wormverify-node/tests/: graphql_flow.rs
crates/wormverify-resilience/: Cargo.toml
crates/wormverify-resilience/src/: breaker.rs  clock.rs  lib.rs  rate_limit.rs  retry.rs
crates/wormverify-types/: Cargo.toml
crates/wormverify-types/benches/: verify.rs
crates/wormverify-types/src/: error.rs  guardian.rs  lib.rs  vaa.rs
crates/wormverify-types/tests/: verify_real.rs
migrations/: 0001_init.sql
monitoring/: prometheus.yml
postman/: WormVerify.postman_collection.json
