[package]
name = "wormverify-api"
description = "async-graphql schema (queries, mutations, subscriptions) exposing the WormVerify aggregation engine over HTTP."
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

[dependencies]
wormverify-types = { workspace = true }
wormverify-core = { workspace = true }
wormverify-infra = { workspace = true }
wormverify-resilience = { workspace = true }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
