[package]
name = "wormverify-core"
version = "0.1.0"
description = "On-chain Wormhole-style core: guardian-set management, N-of-M secp256k1 VAA verification, replay protection, message emission, and governance."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "wormverify_core"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30", features = ["init-if-needed"] }

[dev-dependencies]
libsecp256k1 = "0.7"
tiny-keccak = { version = "2", features = ["keccak"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("custom-heap", "custom-panic", "anchor-debug"))',
] }
